# company_patch_api

./: .gitignore  README.md  manage.py  pyproject.toml
task2_api/: models.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
task2_api/management/commands/: seed.py
task2_api/migrations/: 0001_initial.py
task2_api/services/: changelog.py  changelog_svc.py  company_svc.py  director_svc.py  identity_files_svc.py  orphans.py  orphans_svc.py  shareholder_svc.py  taxinfo_svc.py
tests/: conftest.py  factories.py
tests/integration/: test_api.py
tests/unit/: test_models.py  test_serializers.py
tests/unit/services/: test_changelog.py
